vbnc/vbnc/tests/Errors/30127.vb
Imports System.Runtime.InteropServices

Namespace MarshalAs
    <StructLayout(123S)> _
    Structure ABC
        Dim i As Integer
    End Structure
End Namespace